<resources>
    <string name="app_name">Math_for_kids</string>
    <string name="title">Реши примеры.\nПока не вышло время </string>
    <string name="button">Следующий</string>
    <string name="quest">\?</string>
    <string name="menu_start_game">1й уровень</string>
    <string name="menu_quick_game">2й уровень</string>
    <string name="menu_settings_game">3й уровень</string>
    <string name="menu_about">4й уровень</string>
    <string name="menu_exit">Выход</string>
    <string name="title_game_menu">Математические гонки</string>
    <string name="timer">40</string>
    <string name="name">Ответов правильно/всего:  0/0</string>
    <string name="score">Вы набрали 100 очков</string>
    <string name="textview">Рекорд на этом уровне:</string>
    <string name="buttonBack">Вернуться в меню</string>
    <string name="Clear">Сброс рекорда</string>
</resources>
