<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundmenu" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5sp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/title"
            style="@style/MenuFont"
            android:layout_gravity="right"

            android:text="@string/title_game_menu" />
        <TextView
            android:id="@+id/level1"
            style="@style/MenuFont"
            android:layout_gravity="right"
            android:onClick="onClick"
            android:text="@string/menu_start_game" />

        <TextView
            android:id="@+id/level2"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/menu_quick_game" />

        <TextView
            android:id="@+id/level3"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/menu_settings_game" />

        <TextView
            android:id="@+id/level4"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/menu_about" />

        <TextView
            android:id="@+id/exit"
            style="@style/ExitFont"
            android:onClick="onClick"
            android:text="@string/menu_exit" />
        <TextView
            android:id="@+id/exit2"
            style="@style/ExitFont"
            android:text="" />
    </LinearLayout>

</RelativeLayout>
