<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_records"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.com.adr.android.math_for_kids.Records">

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150sp"
        android:layout_below="@+id/textView33"
        android:id="@+id/hiscore"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView33"
        android:textStyle="bold"
        tools:textSize="34sp"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"/>

    <Button
        android:text="@string/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBack"
        android:layout_marginTop="30sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/hiscore"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

