<?xml version="1.0" encoding="utf-8"?>



<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:background="@drawable/background"

            android:columnCount="4"
            android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_columnSpan="4"
        android:ems="10"
        android:id="@+id/result"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/black"
        android:paddingLeft="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/timer"
        android:text="@string/timer"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/holo_red_dark"
        android:paddingRight="30sp"/>

    <TextView
        android:id="@+id/prim1"
        android:layout_gravity="left"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="70sp"
        android:layout_columnSpan="2"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/answer1"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="70sp"
        android:textStyle="normal|bold"
        android:gravity="left"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"

        android:layout_gravity="fill_horizontal"
        android:text="@string/button"
        />

</GridLayout>
