<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:columnCount="4"
            android:orientation="horizontal"
            android:paddingTop="5sp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/timer"
        android:text="@string/timer"
        android:textSize="12sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:id="@+id/prim1"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer1"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        />

    <TextView
        android:id="@+id/prim6"
        android:layout_gravity="right"
        android:paddingLeft="64sp"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer6"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:scrollbarSize="5dp"

        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim2"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer2"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim7"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer7"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim3"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer3"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim8"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer8"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim4"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer4"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim9"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer9"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim5"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer5"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/prim10"
        android:layout_gravity="right"
        android:text="1 + 1 ="
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:id="@+id/answer10"
        android:layout_gravity="left"
        android:hint="\?"
        android:inputType="number"
        android:maxLength="3"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"

        android:layout_gravity="center_horizontal"
        android:text="@string/button"/>

    <TextView
        android:id="@+id/total"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:hint="ваш рузультат"
        android:text=""
        android:textSize="18sp"
        android:textStyle="normal|bold"/>
</GridLayout>