<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="8"
            android:background="@drawable/background"

            android:columnCount="4"
            android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_columnSpan="4"
        android:ems="10"
        android:id="@+id/result"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/black"
        android:paddingLeft="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/timer"
        android:text="@string/timer"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        tools:textColor="@android:color/holo_red_dark"
        android:paddingRight="30sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4">

        <TextView
            android:id="@+id/prim1"
            android:layout_gravity="left|center_vertical"
            android:text="1 x 1 ="
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="70sp"
            android:gravity="bottom|center_horizontal"
            android:textStyle="normal|bold"

            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/answer1"
            android:layout_gravity="left"
            android:hint="\?"
            android:inputType="number"

            android:maxLength="2"
            android:text=""
            android:textColor="@android:color/holo_green_dark"
            android:textSize="70sp"
            android:textStyle="normal|bold"
            android:gravity="left"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"

        android:layout_gravity="center_vertical|fill_horizontal"
        android:text="@string/button"
        android:background="@drawable/calc_button_green"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="4"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/btnOne"
            android:layout_height="65dp"

            android:contentDescription="1"
            android:text="1"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:layout_width="65dp"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnTwo"
            android:contentDescription="2"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="5"
            android:text="2"
            android:layout_weight="1"
            android:layout_width="65dp"
            android:layout_marginTop="40dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_height="65dp"
            android:contentDescription="3"
            android:layout_column="2"
            android:layout_row="5"
            android:text="3"
            android:layout_weight="1"
            android:layout_width="65dp"
            android:layout_marginTop="40dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnFour"
            android:layout_height="65dp"
            android:contentDescription="4"
            android:text="4"
            android:layout_weight="1"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_width="62dp"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:layout_marginRight="16dp"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/btnFive"
            android:layout_height="65dp"

            android:contentDescription="5"
            android:text="5"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:layout_width="65dp"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="65dp"
            android:layout_height="65dp"

            android:contentDescription="6"
            android:text="6"
            android:layout_weight="1"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="65dp"
            android:layout_height="65dp"

            android:contentDescription="7"
            android:text="7"
            android:layout_weight="1"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="65dp"
            android:layout_height="65dp"

            android:contentDescription="8"
            android:text="8"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="7"
        android:layout_columnSpan="4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/btnNine"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_row="7"
            android:contentDescription="9"
            android:text="9"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnZero"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="7"
            android:contentDescription="0"
            android:text="0"
            android:layout_weight="1"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_blue"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_row="7"
            android:contentDescription="Del"
            android:text="&lt;-"
            android:layout_weight="1"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_red"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:onClick="buttonClick"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_row="7"
            android:contentDescription="Clear"
            android:text="C"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            tools:textSize="24dp"
            android:textStyle="bold"
            android:background="@drawable/calc_button_red"
            android:onClick="buttonClick"
            android:layout_margin="3dp"
            android:textSize="24sp"/>
    </LinearLayout>

</GridLayout>

